--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -68,7 +68,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: proyecto_go_aws
+        ECR_REPOSITORY: proyecto_go
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
