--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -83,7 +83,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: mi-backend
+        container-name: proyecto_go
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
